WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38797
Crash closing window containing Flash plug-in
https://bugs.webkit.org/show_bug.cgi?id=38797
Summary
Crash closing window containing Flash plug-in
Jon Honeycutt
Reported
2010-05-08 00:03:25 PDT
Closing a window with the above URL may crash. <
rdar://problem/7935266
>
Attachments
patch
(9.88 KB, patch)
2010-05-08 00:15 PDT
,
Jon Honeycutt
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2010-05-08 00:15:50 PDT
Created
attachment 55464
[details]
patch
WebKit Review Bot
Comment 2
2010-05-08 00:18:33 PDT
Attachment 55464
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKitTools/DumpRenderTree/win/TestNetscapePlugin/main.cpp:109: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebKitTools/DumpRenderTree/win/TestNetscapePlugin/main.cpp:111: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 3
2010-05-08 23:21:23 PDT
Comment on
attachment 55464
[details]
patch Looks sane.
Jon Honeycutt
Comment 4
2010-05-10 15:59:14 PDT
Landed in
r59100
.
Eric Seidel (no email)
Comment 5
2010-05-10 16:12:54 PDT
Looks like this needs to be skipped on Gtk:
http://build.webkit.org/results/Qt%20Linux%20Release/r59100%20(11532)/plugins/geturlnotify-during-document-teardown-pretty-diff.html
WebKit Review Bot
Comment 6
2010-05-10 16:19:26 PDT
http://trac.webkit.org/changeset/59100
might have broken GTK Linux 32-bit Release and Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/59099
http://trac.webkit.org/changeset/59100
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug