Crash closing window containing Flash plug-in https://bugs.webkit.org/show_bug.cgi?id=38797 <rdar://problem/7935266>

Reviewed by Eric Seidel.

WebCore:

Test: plugins/geturlnotify-during-document-teardown.html

* plugins/PluginView.cpp:
(WebCore::PluginView::load):
Null check the DocumentLoader; it's possible for this to be null while
the Document is being torn down and before the plug-in is destroyed.

WebKitTools:

* DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
(pluginAllocate):
Initialize new member to false.

* DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.h:
Added a new member.

* DumpRenderTree/win/TestNetscapePlugin/main.cpp:
(NPP_New):
Check whether the element has the "testGetURLOnDestroy" attribute, and
record that.
(NPP_Destroy):
If "testGetURLOnDestroy" is set, perform a load while destroying the
plug-in.

LayoutTests:

* plugins/geturlnotify-during-document-teardown.html: Added.
* plugins/resources/geturlnotify-on-destroy.html: Added.

Canonical link: https://commits.webkit.org/50340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59100 268f45cc-cd09-0410-ab3c-d52691b4dbfc