WebKitTools/DumpRenderTree/win/TestNetscapePlugin/main.cpp
@@ -106,7 +106,9 @@ NPError NPP_New(NPMIMEType pluginType, NPP instance, uint16_t mode, int16_t argc
                         pluginLog(instance, "src: %s", argv[i]);
             } else if (_stricmp(argn[i], "testdocumentopenindestroystream") == 0)
                 obj->testDocumentOpenInDestroyStream = TRUE;
-              else if (_stricmp(argn[i], "testwindowopen") == 0)
+            else if (_stricmp(argn[i], "testGetURLOnDestroy") == 0)
+                obj->testGetURLOnDestroy = TRUE;
+            else if (_stricmp(argn[i], "testwindowopen") == 0)
                 obj->testWindowOpen = TRUE;
             else if (_stricmp(argn[i], "onSetWindow") == 0 && !obj->onSetWindow)
                 obj->onSetWindow = strdup(argv[i]);
@@ -122,6 +124,9 @@ NPError NPP_Destroy(NPP instance, NPSavedData **save)
 {
     PluginObject *obj = (PluginObject*)instance->pdata;
     if (obj) {
+        if (obj->testGetURLOnDestroy)
+            browser->geturlnotify(obj->npp, "about:blank", "", "");
+
         if (obj->onStreamLoad)
             free(obj->onStreamLoad);
 
